# QICSBoardGame

./: README.md  main.py  pyproject.toml  requirements.txt  stylesheet.py  ui.py
legacy/QICS_BG/: game.py  ui_advanced.py
src/QICS_BG/: constants.py  game.py  ui.py  ui_advanced.py  utils.py
src/qats/: main.py
src/qats/components/: cube.py
