[tool.poetry]
name = "qicsboardgame"
version = "0.1.0"
description = "A package for the Qats board game"
authors = ["Kim Vallée <kim.vallee@lip6.fr>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.26.4"
pygame = "^2.5.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
